--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 #movie data
-movie.data.jsx
+/movie.data.jsx
 
 # dependencies
 /node_modules
