--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "lodash": "^4.17.21",
+    "memoize": "^0.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-logger": "^1.1.0",
